--- a/index.html
+++ b/index.html
@@ -37,7 +37,14 @@
                 <p>Director: Edward Zwick</p>
                 <p>Description: Denzel Washington won his first Oscar for his role in this Civil War drama.</p>
                 <!-- You can add an image here if you have one -->
-            </li>            
+            </li>
+            <li>
+                <h3>Remember the Titans</h3>
+                <p>Release Year: 2000</p>
+                <p>Director: Boaz Yakin</p>
+                <p>Description: Denzel Washington coaches a high school football team in this inspiring sports drama.</p>
+                <!-- You can add an image here if you have one -->
+            </li>
             <!-- Add more Denzel Washington movies as needed -->
         </ul>
     </section>
