--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Welcome to Red Cohort's Denzel Washington Movies</h1>
-        <h2>DENZEL SUCKS! THIS SHOULD NOT BE IN PROD</h2>
+        <h2>THIS SHOULD NOT BE IN PROD</h2>
     </header>
     <nav>
         <ul>
